examples/negative/protocols/impl_method_signature_mismatch.kai
# Negative fixture (#535 / protocols): `impl P for Box`'s `foo`
# returns `String`, but `protocol P` declares `foo(x: Self) : Int`.
# The pre-typer impl validator rejects the block on the head-name
# mismatch (`String` vs `Int`) before the dispatcher rewrites a
# call site to the wrong-shape impl.

protocol P {
  foo(x: Self) : Int
}

type Box = Box(Int)

impl P for Box {
  fn foo(b: Box) : String = "x"
}

fn main() : Int = foo(Box(1))
